# auta-research

./: .gitignore  README.md  pyproject.toml
configs/: prop_firm.yaml  research.yaml  symbols.yaml
configs/examples/: fixed_candidates.example.yaml  locked_strategy.example.yaml  portfolio_candidates.example.yaml
configs/private/: README.md
configs/prop_firms/: the5ers_bootcamp_20k_gbp.yaml
configs/strategies/: two_candle_rejection.yaml  two_candle_rejection_strict.yaml  two_candle_rejection_trend_filtered.yaml
docs/: PUBLIC_REPO.md
src/auta_research/: __init__.py  backtester.py  candle_math.py  cli.py  config.py  data_store.py  filters.py  fixed_candidate_reports.py  fixed_candidates.py  indicators.py  metrics.py  mt5_connector.py  optimiser.py  patterns.py  plotting.py  portfolio_reports.py  portfolio_sensitivity.py  portfolio_sim.py  prop_multiphase.py  prop_reports.py  prop_sim.py  reports.py  validation.py  variants.py
tests/: test_backtester.py  test_candle_math.py  test_fixed_candidates.py  test_mt5_connector.py  test_optimiser.py  test_patterns.py  test_portfolio_sim.py  test_prop_multiphase.py  test_prop_sim.py
tools/: _bootstrap.py  generate_sample_data.py
