[project]
name = "auta-research"
version = "0.1.0"
description = "Research-only backtesting tool for AUTA 3.0 two-candle wick rejection strategy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "matplotlib>=3.7",
    "rich>=13.0",
    "MetaTrader5>=5.0.45",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
auta-research = "auta_research.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auta_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
